# MSC-Serial

./: CHANGELOG.md  LICENSE  LICENSE (1)  Pyproject · TOML  README.md  msc_serial.py  pyproject.toml
src/mscs/: __init__.py  _core.py
tests/: benchmark.py  security_audit.py  test_fuzz.py  test_mscs.py
