[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mscs"
version = "2.2.1"
description = "Safe, fast serialization for Python — a secure replacement for pickle with native support for numpy arrays and PyTorch tensors."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Esraderey" },
]
keywords = [
    "serialization", "pickle", "safe", "secure",
    "numpy", "pytorch", "tensor", "checkpoint",
    "binary", "fast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
torch = ["numpy>=1.20", "torch>=2.0"]
all = ["numpy>=1.20", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/ElEscribanoSilente/MSC-Serial"
Repository = "https://github.com/ElEscribanoSilente/MSC-Serial"
Issues = "https://github.com/ElEscribanoSilente/MSC-Serial/issues"

[tool.hatch.build.targets.sdist]
include = ["src/mscs/"]

[tool.hatch.build.targets.wheel]
packages = ["src/mscs"]
